--- a/yumshare-client/src/app/components/side-bar/side-bar.component.html
+++ b/yumshare-client/src/app/components/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-	<div class="logo-section">
+	<div class="logo-section" routerLink="/">
 		<img src="assets/logo.png" class="logo" />
 	</div>
 	<mat-nav-list>
