--- a/yumshare-client/src/app/pages/recipe-detail/component/comment/comment.component.scss
+++ b/yumshare-client/src/app/pages/recipe-detail/component/comment/comment.component.scss
@@ -32,7 +32,7 @@
 .regular-comment-list {
   max-height: 400px;
   overflow-y: auto;
-  border: 1px solid #e0e0e0;
+  // border: 1px solid #e0e0e0;
   border-radius: 8px;
   padding: 16px;
   margin: 16px 0;
